components/fia-api/base/fia-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fia-api
  namespace: fia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fia-api
  template:
    metadata:
      labels:
        app: fia-api
    spec:
      containers:
      - name: fia-api
        image: ghcr.io/fiaisis/fia-api@sha256:56d10299f446aba8409c1797fad90c2eaa8a7598f4b34cd68eadd7b08598553e
        ports:
          - name: api-port
            protocol: TCP
            containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 300
        volumeMounts:
          - name: extras-files
            mountPath: /extras
          - name: cephfs-mount
            mountPath: /ceph
      volumes:
        - name: extras-files
          persistentVolumeClaim:
            claimName: extras-manila-fia-api-pvc
        - name: cephfs-mount
          persistentVolumeClaim:
            claimName: fia-api-ceph-pvc
