components/fia-api/base/fia-api-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fia-api-service
  namespace: fia
spec:
  selector:
    app: fia-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
